--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,9 @@ authors = [
     { name = "Pietro Peterlongo", email = "pietro.peterlongo@gmail.com" }
 ]
 requires-python = ">=3.9"
-dependencies = []
-
-[project.scripts]
-mib = "mib:main"
+dependencies = [
+    "pydantic>=2.10.6",
+]
 
 [build-system]
 requires = ["hatchling"]
@@ -18,8 +17,3 @@ build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/mib"]
-
-[[tool.uv.index]]
-name = "testpypi"
-url = "https://test.pypi.org/simple/"
-publish-url = "https://test.pypi.org/legacy/"
