--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "mib-notebook"
+name = "nobe-literate"
 version = "0.1.2"
-description = "A literate programming tool for static notebook as a library"
+description = "A literate programming tool for publishing html documents as a library"
 readme = "README.md"
 authors = [
     { name = "Pietro Peterlongo" }
@@ -21,15 +21,15 @@ license = "MIT"
 license-files = ["LICENSE"]
 
 [project.urls]
-repository = "https://github.com/pietroppeter/mib"
-issue-tracker = "https://github.com/pietroppeter/mib/issues"
+repository = "https://github.com/pietroppeter/nobe"
+issue-tracker = "https://github.com/pietroppeter/nobe/issues"
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/mib"]
+packages = ["src/nobe"]
 
 [tool.ruff.lint]
 select = ["I"]
